--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -122,9 +122,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/11287814_104498739886727_760038805_n.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -132,9 +130,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/aborrajados.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -142,9 +138,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/14117716_1104890622928591_1408774854086640197_n.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -152,9 +146,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/14032750_1663555287295629_1688503763_n.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -162,9 +154,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/14192583_1105822896168697_8328234381967817128_n.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -172,9 +162,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/bagre.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -182,9 +170,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/13652274_1580303425605399_1639548519_n.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -192,9 +178,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/13739472_518511981678950_509968201_n.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -202,9 +186,7 @@
                         <div class="col-md-4 col-sm-6 portfolio-item">
                             <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content">
-                                        <i class="fa fa-plus fa-3x"></i>
-                                    </div>
+                                    <div class="portfolio-hover-content" />
                                 </div>
                                 <img src="Recourses/images/carne.jpg" id="foto2" class="img-responsive" alt=""/>
                             </a>
@@ -356,7 +338,7 @@
                                     <div class="modal-body">
                                         <!-- Project Details Go Here -->
                                         <img class="img-responsive img-centered" src="Recourses/images/11287814_104498739886727_760038805_n.jpg" alt=""/>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close Project</button>
                                     </div>
                                 </div>
                             </div>
@@ -404,7 +386,7 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                     <div class="modal-body">
                                         <img class="img-responsive img-centered" src="Recourses/images/14117716_1104890622928591_1408774854086640197_n.jpg" alt=""/>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close Project</button>
                                     </div>
                                 </div>
                             </div>
@@ -428,7 +410,7 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                     <div class="modal-body">
                                         <img class="img-responsive img-centered" src="Recourses/images/14032750_1663555287295629_1688503763_n.jpg" alt=""/>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close Project</button>
                                     </div>
                                 </div>
                             </div>
@@ -452,7 +434,7 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                     <div class="modal-body">
                                         <img class="img-responsive img-centered" src="Recourses/images/14192583_1105822896168697_8328234381967817128_n.jpg" alt=""/>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close Project</button>
                                     </div>
                                 </div>
                             </div>
@@ -476,7 +458,7 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                     <div class="modal-body">
                                         <img class="img-responsive img-centered" src="Recourses/images/bagre.jpg" alt=""/>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close Project</button>
                                     </div>
                                 </div>
                             </div>
@@ -498,7 +480,7 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                     <div class="modal-body">
                                         <img class="img-responsive img-centered" src="Recourses/images/13652274_1580303425605399_1639548519_n.jpg" alt=""/>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal"> Close Project</button>
                                     </div>
                                 </div>
                             </div>
@@ -522,7 +504,7 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                     <div class="modal-body">
                                         <img class="img-responsive img-centered" src="Recourses/images/13739472_518511981678950_509968201_n.jpg" alt=""/>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close Project</button>
                                     </div>
                                 </div>
                             </div>
@@ -546,7 +528,7 @@
                                 <div class="col-lg-8 col-lg-offset-2">
                                     <div class="modal-body">
                                         <img class="img-responsive img-centered" src="Recourses/images/carne.jpg" alt=""/>
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close Project</button>
                                     </div>
                                 </div>
                             </div>
